# time_table_gui2

./: .gitignore  Cargo.toml  README.md
src/: file_open_select.rs  main.rs  main_window.rs  menubar.rs
