[package]
name = "time_table_gui2"
version = "0.1.0"
edition = "2024"
authors = ["Robert Heller <heller@deepsoft.com>"]
license = "GPL-2.0-only"
readme = "README.md"
keywords = ["model-railway", "railroad", "model-railroad", "time-table"]
categories = ["command-line-utilities"]
repository = "https://github.com/RobertPHeller/time_table_gui2"
documentation = "https://docs.rs/time_table_gui2"
description = "Model Railroad Time Table generating program"

[dependencies]
time_table = "0.1.3"
iced = { version = "0.13.1", features = ["lazy"] }


